hphp/test/zend/bad/Zend/tests/gc_004.php
<?php
$a = array();
$a[] =& $a;
var_dump($a);
unset($a);
var_dump(gc_collect_cycles());
echo "ok\n"
?>